# napari-spine-tracker

./: LICENSE  README.md  _tmp_merge_dfs.py  _tmp_nb_corrected.py  _tmp_rename_min_id.py  _tmp_separate_by_tp.py  setup.cfg  tox.ini
src/napari_spine_tracker/: __init__.py  _widget.py  napari.yaml  tmp_test.py
src/napari_spine_tracker/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_spine_tracker/refinement_utils/: id_changer.py  manager.py  multi_viewer.py  name_pattern_loader.py  visualizer.py
src/napari_spine_tracker/tabs/: __init__.py  multi_view.py  new_project.py  open_project.py  refine_tracking.py
