[metadata]
name = napari-spine-tracker
version = attr: napari_spine_tracker.__version__
description = i] NaNapari plugin to correct spine tracking results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pamelaosuna/napari-spine-tracker
author = Kaschube Lab
author_email = osuna@fias.uni-frankfurt.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/pamelaosuna/napari-spine-tracker/issues
    Documentation = https://github.com/pamelaosuna/napari-spine-tracker#README.md
    Source Code = https://github.com/pamelaosuna/napari-spine-tracker
    User Support = https://github.com/pamelaosuna/napari-spine-tracker/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-spine-tracker = napari_spine_tracker:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari


[options.package_data]
* = *.yaml
